--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -77,7 +77,7 @@
             <span class="glyphicon glyphicon-calendar"></span> Date Filter <span class="caret"></span>
         </button>
         <button class="btn btn-default reset" ng-class="{true: '', false: 'disabled'}[brush.length > 0]" ng-click="clearBrush()">
-            <span class="glyphicon glyphicon-remove"></span> Reset
+            <span class="glyphicon glyphicon-remove"></span> Reset Date
         </button>
         <ul class="dropdown-menu" role="menu">
             <div>
