NEON-1600 Added a No Data message to the Line Chart (that does not require advanced options to be enabled) and fixed a minor bug for Line Charts with no data.

--- a/app/css/directives/linechart.less
+++ b/app/css/directives/linechart.less
@@ -111,6 +111,12 @@
             }
         }
     }
+
+    .no-data {
+        color: @main-text-color;
+        font-weight: bold;
+        margin-top: 10px;
+    }
 }
 
 .axis {
