--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -55,6 +55,8 @@
             <span class="legend-text">{{colorMapping.series}}</span>
             <span class="legend-text legend-text-small">{{getLegendItemAggregationText(colorMapping)}}</span>
         </div>
+
+        <span class="no-data pull-left" ng-show="noData">No data for current filters.</span>
     </div>
 </div>
 
