Made the left, right, and bottom gridster resize handles smaller so users can click on scrollbars if they're present.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -427,6 +427,18 @@ label{
 
 .gridster-item-resizable-handler {
     z-index: 1060;
+
+    &.handle-e {
+        width: 5px;
+    }
+
+    &.handle-w {
+        width: 5px;
+    }
+
+    &.handle-s {
+        height: 5px;
+    }
 }
 
 .header-container {
