--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -47,7 +47,7 @@
             top: 30px;
             right: -10px;
             position: absolute;
-            width: 250px;
+            width: 300px;
         }
     }
 
@@ -83,14 +83,36 @@
                 padding: 5px 5px 2px;
             }
 
-            .layer-options {
-                .btn {
-                    &.active {
-                        color: @accent-bright;
+            .layer-options-container {
+                > label {
+                    font-size: 14px;
+                }
+
+                .layer-options {
+                    background-color: @main-background;
+                    border-style: solid;
+                    border-width: 1px;
+                    border-color: @border-color;
+                    border-radius: 4px;
+                    padding: 10px;
+
+                    > .btn-group {
+                        margin-bottom: 50px;
+
+                        .btn {
+                            &.active {
+                                color: @accent-bright;
+                            }
+
+                            .glyphicon {
+                                margin-right: 5px;
+                            }
+                        }
                     }
 
-                    .glyphicon {
-                        margin-right: 5px;
+                    > .error {
+                        color: @error-text-color;
+                        margin: 5px;
                     }
                 }
             }
