--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -1,16 +1,27 @@
 <div class="header-container menu-container">
     <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
-        <div class="form-group layer-options" ng-repeat="layer in options.layers">
+        <div class="form-group layer-options-container" ng-repeat="layer in options.layers">
             <label>{{layer.name}}</label>
-            <div class="btn-group">
-                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.visible === true]">
-                    <input type="checkbox" style="display:none" ng-model="layer.visible" ng-change="updateLayerVisibility(layer)">
-                    <span class="glyphicon glyphicon-eye-open"></span> Visible
-                </label>
-                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.active === true]">
-                    <input type="checkbox" style="display:none" ng-model="layer.active" ng-change="updateFilteringOnLayer(layer)">
-                    <span class="glyphicon glyphicon-filter"></span> Filter
-                </label>
+            <div class="form-group layer-options">
+                <div class="btn-group">
+                    <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.visible === true]">
+                        <input type="checkbox" style="display:none" ng-model="layer.visible" ng-change="updateLayerVisibility(layer)">
+                        <span class="glyphicon glyphicon-eye-open"></span> Visible
+                    </label>
+                    <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.active === true]">
+                        <input type="checkbox" style="display:none" ng-model="layer.active" ng-change="updateFilteringOnLayer(layer)">
+                        <span class="glyphicon glyphicon-filter"></span> Filter
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>Layer Type</label>
+                    <select class="form-control" ng-model="layer.type" ng-options="layer for layer in mapLayers"
+                        ng-required="true" ng-change="updateLayer(layer.filterKeys)">
+                    </select>
+                </div>
+                <div class="error">
+                    {{ layer.error }}
+                </div>
             </div>
             <div class="clearfix"></div>
         </div>
