Made some minor changes in response to code review feedback, most notably changing how visualization export files were named.

--- a/app/partials/directives/exportWidgets.html
+++ b/app/partials/directives/exportWidgets.html
@@ -1,6 +1,6 @@
-<ul class="nav navbar-nav export-widgets-button neon-popup-button">
+<ul class="nav navbar-nav export-widgets-button">
 	<li>
-		<a class="navbar-nav collapsed dropdown-toggle primary" ng-click="exportAll()">
+		<a class="navbar-nav collapsed dropdown-toggle primary neon-popup-button" ng-click="exportAll()">
 		  Export All Widgets
 		</a>
 	</li>
