Removed extra bottom margins from nested form-group elements.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -420,6 +420,12 @@ label{
     }
 }
 
+.form-group {
+    .form-group {
+        margin-bottom: 0px;
+    }
+}
+
 .gridster {
     margin-top: 5px;
     margin-bottom: 5px;
