Hide the Create Custom Connection button in the Database Config if hideAdvancedOptions is enabled in the configuration file.

--- a/app/partials/directives/databaseConfig.html
+++ b/app/partials/directives/databaseConfig.html
@@ -9,8 +9,8 @@
         <a href="#" ng-click="connectToPreset(server)" ng-bind="server.name"></a>
       </li>
 
-      <li class="divider"></li>
-      <li ng-class="{true: 'active', false: ''}[activeServer == 'Custom' || !(servers.length > 0)]">
+      <li class="divider" ng-hide="hideAdvancedOptions"></li>
+      <li ng-class="{true: 'active', false: ''}[activeServer == 'Custom' || !(servers.length > 0)]" ng-hide="hideAdvancedOptions">
         <a data-toggle="modal" href="#customConnectionModal" ng-click="openedCustom()">Custom...</a>
       </li>
 
