Force datetimepicker height because month and year views are shorter and cause unwanted empty space.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -915,6 +915,8 @@ label{
 
         .table-responsive {
             display: inline-block;
+            /* Force the datetimepicker height because the year and month views are shorter by default and cause unwanted empty space. */
+            height: 300px;
         }
     }
 }
