--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -1,5 +1,8 @@
 <div class="header-container menu-container">
     <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
+        <div class="form-group instructions-container">
+            <label><span class="glyphicon glyphicon-info-sign"></span> SHIFT + DRAG on Map to Filter</label>
+        </div>
         <div class="form-group layer-options-container" ng-repeat="layer in options.layers">
             <label>{{layer.name}}</label>
             <div class="form-group layer-options">
@@ -39,8 +42,4 @@
         <span class="filter-label">Map Filter</span>
         <span class="glyphicon glyphicon-remove" ng-click="clearFilters(true)"></span>
     </div>
-</div>
-
-<div class="footer-container">
-    <span class="footer-text">SHIFT + DRAG to filter</span>
 </div>
