Added icons for play, step, and stop

--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -73,6 +73,17 @@
 
 <div class="header-container filter-container">
     <div class="neon-datetimepicker dropdown pull-right">
+
+        <button class="btn btn-default" role="button" data-target="#" href="#">
+            <span class="glyphicon glyphicon-play-circle"></span> Play <span class="caret"></span>
+        </button>
+        <button class="btn btn-default" role="button" data-target="#" href="#">
+            <span class="glyphicon glyphicon-step-forwarr"></span> Step <span class="caret"></span>
+        </button>
+        <button class="btn btn-default" role="button" data-target="#" href="#">
+            <span class="glyphicon glyphicon-stop"></span> Stop <span class="caret"></span>
+        </button>
+
         <button class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" data-target="#" href="#">
             <span class="glyphicon glyphicon-calendar"></span> Date Filter <span class="caret"></span>
         </button>
