--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -1,39 +1,166 @@
 <div class="header-container menu-container">
-    <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
+    <options-menu parent-element="element" resize="resizeOptionsMenu" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
         <div class="form-group instructions-container">
-            <label><span class="glyphicon glyphicon-info-sign"></span> SHIFT + DRAG on Map to Filter</label>
+            <label><span class="glyphicon glyphicon-info-sign margin-right"></span>SHIFT + DRAG on Map to Filter</label>
         </div>
+
+        <!-- Containers for the existing map layers. -->
         <div class="form-group layer-options-container" ng-repeat="layer in options.layers">
-            <label>{{layer.name}}</label>
             <div class="form-group layer-options">
-                <div class="btn-group">
-                    <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.visible === true]">
-                        <input type="checkbox" style="display:none" ng-model="layer.visible" ng-change="updateLayerVisibility(layer)">
-                        <span class="glyphicon glyphicon-eye-open"></span> Visible
-                    </label>
-                    <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.active === true]">
-                        <input type="checkbox" style="display:none" ng-model="layer.active" ng-change="updateFilteringOnLayer(layer)">
-                        <span class="glyphicon glyphicon-filter"></span> Filter
-                    </label>
+                <div class="layer-options-row">
+                    <div class="btn-group layer-options-col">
+                        <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.visible === true]" title="Toggle Layer Visibility">
+                            <input type="checkbox" style="display:none" ng-model="layer.visible" ng-change="updateLayerVisibility(layer)">
+                            <span class="glyphicon glyphicon-eye-open"></span>
+                        </label>
+                        <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.active === true]" title="Toggle Map Filtering on Layer">
+                            <input type="checkbox" style="display:none" ng-model="layer.active" ng-change="updateFilteringOnLayer(layer)">
+                            <span class="glyphicon glyphicon-filter"></span>
+                        </label>
+                        <label class="btn btn-danger" title="Delete Layer">
+                            <input type="button" style="display:none" ng-click="removeLayer(layer, $index)">
+                            <span class="glyphicon glyphicon-remove"></span>
+                        </label>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Layer Name</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="{{layer.table}}" ng-model="layer.name" ng-required="false"/>
+                            <div class="input-group-btn">
+                                <button type="button" class="btn btn-default" title="Refresh" ng-click="">
+                                    <span class="glyphicon glyphicon-refresh"></span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Layer Type</label>
+                        <select class="form-control" ng-model="layer.type" ng-options="type for type in MAP_LAYER_TYPES" ng-required="true" ng-change="updateLayer(layer.filterKeys)">
+                        </select>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Database</label>
+                        <input type="text" class="form-control" ng-model="layer.databasePrettyName" ng-disabled="true"/>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Table</label>
+                        <input type="text" class="form-control" ng-model="layer.tablePrettyName" ng-disabled="true"/>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label>Layer Type</label>
-                    <select class="form-control" ng-model="layer.type" ng-options="layer for layer in mapLayers"
-                        ng-required="true" ng-change="updateLayer(layer.filterKeys)">
-                    </select>
+
+                <div class="layer-options-row">
+                    <div class="form-group layer-options-col">
+                        <label>Data Limit</label>
+                        <div class="input-group">
+                            <input type="number" min="1" class="form-control" ng-model="layer.limit" ng-required="true"/>
+                            <div class="input-group-btn">
+                                <button type="button" class="btn btn-default" title="Refresh" ng-click="updateLayer(layer.filterKeys)">
+                                    <span class="glyphicon glyphicon-refresh"></span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Longitude Field</label>
+                        <select class="form-control" ng-model="layer.longitudeMapping" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="updateLayer(layer.filterKeys)"></select>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Latitude Field</label>
+                        <select class="form-control" ng-model="layer.latitudeMapping" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="updateLayer(layer.filterKeys)"></select>
+                    </div>
+
+                    <div class="form-group layer-options-col" ng-show="layer.type == 'points' || layer.type == 'cluster'">
+                        <label>Color/Group Field</label>
+                        <select class="form-control" ng-model="layer.colorBy" ng-options="field for field in fields" ng-required="layer.type == 'points' || layer.type == 'cluster'" ng-disabled="!(fields.length > 0)" ng-change="updateLayer(layer.filterKeys)"></select>
+                    </div>
+
+                    <div class="form-group layer-options-col" ng-show="layer.type == 'points' || layer.type == 'cluster'">
+                        <label>Size Field</label>
+                        <select class="form-control" ng-model="layer.sizeBy" ng-options="field for field in fields" ng-required="layer.type == 'points' || layer.type == 'cluster'" ng-disabled="!(fields.length > 0)" ng-change="updateLayer(layer.filterKeys)"></select>
+                    </div>
                 </div>
-                <div class="error">
-                    {{ layer.error }}
+
+                <div class="layer-options-row" ng-hide="layer.error == undefined">
+                    <div class="error layer-options-col">
+                        {{layer.error}}
+                    </div>
                 </div>
             </div>
-            <div class="clearfix"></div>
         </div>
-        <div class="form-group reset-options">
+
+        <!-- Container for a new map layer. -->
+        <div class="form-group layer-options-container">
+            <div class="form-group layer-options new-layer">
+                <div class="layer-options-row">
+                    <div class="btn-group layer-options-col">
+                        <label class="btn btn-primary one-btn" title="Add Map Layer">
+                            <input type="button" style="display:none" ng-click="addNewLayer()">
+                            <span class="glyphicon glyphicon-plus margin-right"></span>Add Map Layer
+                        </label>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Layer Name</label>
+                        <input type="text" class="form-control" placeholder="{{options.newLayer.table.prettyName}}" ng-model="options.newLayer.name" ng-required="false"/>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Layer Type</label>
+                        <select class="form-control" ng-model="options.newLayer.type" ng-options="type for type in MAP_LAYER_TYPES" ng-required="true">
+                        </select>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Database</label>
+                        <select class="form-control" ng-model="options.newLayer.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()"></select>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Table</label>
+                        <select class="form-control" ng-model="options.newLayer.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFields()"></select>
+                    </div>
+                </div>
+
+                <div class="layer-options-row">
+                    <div class="form-group layer-options-col">
+                        <label>Data Limit</label>
+                        <input type="number" min="1" class="form-control" ng-model="options.newLayer.limit" ng-model="options.newLayer.limit" ng-required="true"/>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Longitude Field</label>
+                        <select class="form-control" ng-model="options.newLayer.longitude" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)"></select>
+                    </div>
+
+                    <div class="form-group layer-options-col">
+                        <label>Latitude Field</label>
+                        <select class="form-control" ng-model="options.newLayer.latitude" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)"></select>
+                    </div>
+
+                    <div class="form-group layer-options-col" ng-show="options.newLayer.type == 'points' || options.newLayer.type == 'cluster'">
+                        <label>Color/Group Field</label>
+                        <select class="form-control" ng-model="options.newLayer.color" ng-options="field for field in fields" ng-disabled="!(fields.length > 0)"></select>
+                    </div>
+
+                    <div class="form-group layer-options-col" ng-show="options.newLayer.type == 'points' || options.newLayer.type == 'cluster'">
+                        <label>Size Field</label>
+                        <select class="form-control" ng-model="options.newLayer.size" ng-options="field for field in fields" ng-disabled="!(fields.length > 0)"></select>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
             <button type="button" class="btn btn-default" title="Reset Map View" ng-click="setDefaultView()">
               Reset View
             </button>
         </div>
-
     </options-menu>
 </div>
 
