--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -45,7 +45,7 @@
 
 <div class="header-container filter-container">
     <div class="legend">
-        <div class="filter-reset pull-right" ng-class="{true: '', false: 'hidden'}[brushExtent.length > 0]">
+        <div class="filter-reset pull-right" ng-class="{true: '', false: 'hidden'}[brushExtent.length > 0]" title="Date from {{brushExtent[0].toDateString()}} to {{brushExtent[1].toDateString()}}">
             <span class="filter-label">Date Filter</span>
             <span class="glyphicon glyphicon-remove" ng-click="removeBrush()"></span>
         </div>
