--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -38,7 +38,7 @@
 <div class="header-container filter-container">
     <div class="legend">
         <div class="filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]" title="{{filterSet.key}}={{filterSet.value}}">
-            <span class="filter-label">{{filterSet.key}}={{filterSet.value}}</span>
+            <span class="filter-label">{{filterSet.value}}</span>
             <span class="glyphicon glyphicon-remove" ng-click="clearFilterSet()"></span>
         </div>
 
