NEON-1352 adding limiting message to barchart

--- a/app/css/directives/barchart.less
+++ b/app/css/directives/barchart.less
@@ -169,6 +169,18 @@
             height: 100%;
         }
     }
+
+    .header-container {
+        .legend {
+            .filter-reset {
+                margin-left: 15px;
+            }
+
+            .limit-message {
+                margin-top: 10px;
+            }
+        }
+    }
 }
 
 .visualization-widget {
