NEON-1615 The Timeline now displays its date range inside the date filter button.  Removed the reset button from the Timeline and added a filter reset notification like the other visualizations.

--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -85,6 +85,7 @@
 
     .neon-datetimepicker {
         margin-top: 5px;
+        margin-left: 10px;
 
         .dropdown-menu {
             /* Match the width of two datetimepickers plus margin/padding/scrollbar. */
