--- a/app/css/style.less
+++ b/app/css/style.less
@@ -561,6 +561,43 @@ label{
     z-index: auto;
 }
 
+/* Applied to the main options menu to position it properly at the right side of the navbar. */
+#navbar-option-menu {
+    margin-top: 13px;
+    margin-right: 0px;
+}
+
+#fileDragAndDrop {
+    border: 2px dashed @main-text-color;
+    border-radius: 5px;
+    min-width: 450px;
+    min-height: 200px;
+    text-align: center;
+    margin-bottom: 8px;
+    font-color: @main-text-color;
+    font-size: 200%;
+
+    > span {
+        display: inline-block;
+        padding-top: 80px;
+    }
+}
+/* Applied to the elements that display inputs for import database and table names, to position them properly in the footer of a modal. */
+.confirmModalFooterField {
+    float: left;
+    margin-top: 5px;
+    font-color: @main-text-color;
+}
+
+/* Makes items unselectable and forces the cursor to remain default. */
+.unselectable {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: default;
+}
+
 .navbar{
     margin-bottom: 0;
 
@@ -603,6 +640,11 @@ label{
 
                     &:focus, &:hover, &.collapsed:hover{
                         color: @accent-bright;
+                    }
+
+                    /* Can be applied to elements after the first in a list to prevent them from being spaced way too far apart. */
+                    &.navbar-list-bottom {
+                        padding-top: 0px;
                     }
                 }
             }
