Improved Filter Builder date button text overflow behavior and added title/tooltip text.

--- a/app/css/directives/filterBuilder.less
+++ b/app/css/directives/filterBuilder.less
@@ -160,6 +160,15 @@
                 width: 50%;
             }
         }
+
+        .neon-datetimepicker {
+            button {
+                padding: 6px;
+                overflow-x: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+        }
     }
 
     .form-group-button {
