NEON-1562 Add move to top/bottom buttons in drag handle

--- a/app/css/directives/visualizationWidget.less
+++ b/app/css/directives/visualizationWidget.less
@@ -36,14 +36,24 @@
         .visualization-buttons {
             background-color: #dddddd;
 
-            .btn {
-                opacity: 1;
+            .move-to {
+
+                .glyphicon {
+
+                    &:first-child {
+                        margin-top: -1px;
+                    }
+                }
+
+                .glyphicon {
+                    display: block;
+                    font-size: 14px;
+                    margin-top: -5px;
+                }
             }
 
-            .btn.center {
-                margin-left: auto;
-                margin-right: auto;
-                display: block;
+            .btn {
+                opacity: 1;
             }
         }
     }
@@ -55,7 +65,11 @@
         right: 0px;
         border-radius: 10px;
         /* Width = Resize Button + Remove Button + Margins */
-        width: 60px;
+        width: 110px;
+
+        &.small {
+            width: 85px;
+        }
 
         .btn {
             margin: 4px 0px 4px 8px;
