Very minor change to style for modal footers.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -609,7 +609,7 @@ label{
     }
 }
 /* Applied to the elements that display inputs for import database and table names, to position them properly in the footer of a modal. */
-.confirmModalFooterField {
+.modalFooterField {
     float: left;
     margin-top: 5px;
     font-color: @main-text-color;
