--- a/app/partials/directives/importFile.html
+++ b/app/partials/directives/importFile.html
@@ -56,7 +56,7 @@
         </p>
       </div>
       <div class="modal-footer">
-        <input type="text" id="dateStringInput" class="confirmModalFooterField" value="" maxlength="50" size="30" placeholder="Date format sting here if not standard">
+        <input type="text" id="dateStringInput" class="modalFooterField" value="" maxlength="50" size="30" placeholder="Date format sting here if not standard">
         <button type="button" class="btn btn-default" ng-click="sendConfirmedChoices()">Confirm</button> <!-- data-dismiss="modal" -->
       </div>
     </div>
