NEON-1564 Fix zoombox not working on 'OpenStreetMap' link hover

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -199,6 +199,13 @@
             }
         }
     }
+
+    .olControlAttribution {
+        
+        a {
+            pointer-events: none;
+        }
+    }
 }
 
 .visualization-widget-mobile {
