--- a/app/css/directives/visualizationWidget.less
+++ b/app/css/directives/visualizationWidget.less
@@ -79,15 +79,12 @@
             opacity: 0;
 
             .glyphicon {
+                color: @accent-bright;
                 font-size: 16px;
             }
 
             .glyphicon-remove {
-                color: #f00;
-            }
-
-            .glyphicon-resize-full, .glyphicon-resize-small {
-                color: @accent-bright;
+                color: @error-text-color;
             }
         }
     }
