Added some quality of life stuff - username carrying from modal to modal and things like that.

--- a/app/partials/directives/importFile.html
+++ b/app/partials/directives/importFile.html
@@ -21,15 +21,15 @@
           <input type="file" id="fileSelect" value="">
         </div>
         <div class="modal-footer">
-        	<input type="text" id="usernameInput" class="modalFooterField" value="" maxLength="40" size="20" placeholder="Username">
-        	<input type="text" id="databaseInput" class="modalFooterField" value="" maxLength="100" size="30" placeholder="Name for database">
+        	<input type="text" id="importUsernameInput" class="modalFooterField" value="" maxLength="40" size="20" placeholder="Username">
+        	<input type="text" id="importDatabaseInput" class="modalFooterField" value="" maxLength="100" size="30" placeholder="Name for database">
           <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="uploadFile()">Import</button>
         </div>
     </div>
   </div>
 </div>
 
-<div class="modal fade" id="confirmModal" data-keyboard="false" data-backdrop="static" tabIndex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="confirmChoicesModal" data-keyboard="false" data-backdrop="static" tabIndex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
