--- a/app/css/directives/filterBuilder.less
+++ b/app/css/directives/filterBuilder.less
@@ -168,6 +168,11 @@
                 text-overflow: ellipsis;
                 white-space: nowrap;
             }
+
+            .dropdown-menu {
+                left: auto;
+                right: 0;
+            }
         }
     }
 
