--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -79,13 +79,12 @@
 
     <h4 class="pull-left">
         <span class="count text-primary">{{recordCount}}</span> records
-        <span ng-if='recordCount > 0'> From </span>
     </h4>
 
     <div class="neon-datetimepicker dropdown pull-left">
         <button class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" data-target="#" href="#">
             <span class="glyphicon glyphicon-calendar"></span>
-            {{startDateForDisplay || '?'}} to {{endDateForDisplay || '?'}}
+            From {{startDateForDisplay || '?'}} to {{endDateForDisplay || '?'}}
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu">
