NEON-1367 Clear timeline and show message on error

--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -107,6 +107,12 @@
             }
         }
     }
+
+    .no-data {
+        color: @main-text-color;
+        font-weight: bold;
+        margin-top: 10px;
+    }
 }
 
 .visualization-widget-mobile {
