--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -107,13 +107,16 @@
     </div>
 </div>
 
-  <div class="collapsed" ng-class="{true: 'collapsed', false: ''}[options.collapsed]">
-    <div timeline-selector-chart timeline-data='data' timeline-brush='brush' collapsed='options.collapsed' extent-dirty='extentDirty' primary-series='options.primarySeries' granularity='options.granularity' show-focus='options.showFocus' messenger='messenger'></div>
-  </div>
+<div class="collapsed" ng-class="{true: 'collapsed', false: ''}[options.collapsed]" ng-hide="noData">
+    <div timeline-selector-chart timeline-data='data' timeline-brush='brush' collapsed='options.collapsed' extent-dirty='extentDirty'
+        primary-series='options.primarySeries' granularity='options.granularity' show-focus='options.showFocus' messenger='messenger'></div>
+</div>
 
-  <div class="text-center mmpp" ng-class="{true: '', false: 'hidden'}[opencpu.enableMmpp === true && options.granularity === 'hour' && !eventProbabilitiesDisplayed && !options.collapsed]">
+<span class="no-data pull-left" ng-show="noData">No data for current filters.</span>
+
+<div class="text-center mmpp" ng-class="{true: '', false: 'hidden'}[opencpu.enableMmpp === true && options.granularity === 'hour' && !eventProbabilitiesDisplayed && !options.collapsed]" ng-hide="noData">
     <a class="btn" ng-click="runMMPP()">
-      Click to run event probability analysis (this may take a few minutes) <span class="glyphicon glyphicon-transfer"></span>
+        Click to run event probability analysis (this may take a few minutes) <span class="glyphicon glyphicon-transfer"></span>
     </a>
-  </div>
+</div>
 
