Fixed a minor bug in the CSS for the visualization drag handles.

--- a/app/css/directives/visualizationWidget.less
+++ b/app/css/directives/visualizationWidget.less
@@ -77,6 +77,8 @@
             line-height: 0px;
             z-index: 1065;
             opacity: 0;
+            /* Force the width of the buttons to avoid odd behavior. */
+            width: 18px;
 
             .glyphicon {
                 color: @accent-bright;
